--- a/style.css
+++ b/style.css
@@ -2,27 +2,69 @@
   box-sizing: border-box;
 }
 
+main,
+.to-do-list,
+.to-do-list__input,
+.to-do-list__items__item {
+  display: flex;
+}
+
+button,
+input[type=checkbox] {
+  cursor: pointer;
+  outline: none;
+}
+
+.to-do-list__input button,
+.to-do-list__items__item button {
+  border: none;
+  background-color: transparent;
+}
+
+.to-do-list,
+.to-do-list__input,
+.to-do-list__items {
+  border-radius: 10px;
+}
+
+.to-do-list__input__add,
+.to-do-list__items__item__edit {
+  color: #9381FF;
+}
+
 .to-do-list {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
-}
-
-.to-do-list__container {
   background-color: #9381FF;
+  flex-direction: column;
+  align-items: center;
 }
 
+.to-do-list__input {
+  height: 2em;
+  background-color: #FFF;
+  margin: 2em 1em 1em 1em;
+}
 .to-do-list__input input[type=text] {
-  border-radius: 20px;
-}
-.to-do-list__input input[type=submit] {
-  color: #B8B8FF;
+  background: transparent;
+  border: none;
 }
 
-.to-do-list__items input[type=checkbox]:checked {
-  background-color: black;
+.to-do-list__items {
+  background-color: #FFF;
+  list-style: none;
+  padding-left: 0;
 }
 
-.to-do-list__items__item__text {
-  display: inline;
+.to-do-list__items__item {
+  align-items: center;
+}
+
+.to-do-list__items__item__delete {
+  color: #D62828;
+}
+
+.to-do-list__clear-all {
+  align-self: flex-end;
 }
 
 /*# sourceMappingURL=style.css.map */
