fixed element aligning

--- a/style.css
+++ b/style.css
@@ -2,6 +2,11 @@
   box-sizing: border-box;
 }
 
+html,
+body {
+  height: 100%;
+}
+
 main,
 .to-do-list,
 .to-do-list__input,
@@ -21,10 +26,16 @@ input[type=checkbox] {
   background-color: transparent;
 }
 
-.to-do-list,
 .to-do-list__input,
 .to-do-list__items {
-  border-radius: 10px;
+  width: 100%;
+}
+
+.to-do-list,
+.to-do-list__input,
+.to-do-list__items,
+.to-do-list__clear-all {
+  border-radius: 0.625rem;
 }
 
 .to-do-list__input__add,
@@ -38,16 +49,21 @@ input[type=checkbox] {
   background-color: #9381FF;
   flex-direction: column;
   align-items: center;
+  padding: 1.5em 3em;
 }
 
 .to-do-list__input {
   height: 2em;
   background-color: #FFF;
-  margin: 2em 1em 1em 1em;
+  margin-top: 1em;
+  margin-bottom: 1em;
 }
 .to-do-list__input input[type=text] {
   background: transparent;
+  padding-left: 1em;
   border: none;
+  outline: none;
+  flex-grow: 1;
 }
 
 .to-do-list__items {
@@ -74,6 +90,9 @@ input[type=checkbox] {
 
 .to-do-list__clear-all {
   align-self: flex-end;
+  padding: 0.5em 1em;
+  background-color: #FFA970;
+  border: 2px solid black;
 }
 
 /*# sourceMappingURL=style.css.map */
