--- a/style.scss
+++ b/style.scss
@@ -1,16 +1,22 @@
 $font-stack: Verdana, Geneva, Tahoma, sans-serif;
 
-$font-small: 1rem;
-$font-medium: 1.25rem;
+$font-small: 1.25rem;
+$font-medium: 1.75rem;
 
 $white: #FFF;
 $light-purple: #9381FF;
+$dark-purple: #534C71;
 $light-blue: #B8B8FF;
 $light-orange: #FFA970;
+$dark-orange: #FF8A3C;
 $red: #D62828;
 
 * {
     box-sizing: border-box;
+}
+
+button {
+    font-size: $font-small;
 }
 
 html,
@@ -39,8 +45,9 @@ input[type=checkbox] {
     }
 }
 
-.to-do-list__input,
+#to-do-list__input,
 .to-do-list__items {
+    color: $dark-purple;
     width: 100%;
 }
 
@@ -57,6 +64,18 @@ input[type=checkbox] {
     margin-left: 2em;
 }
 
+.to-do-list__input__add,
+.to-do-list__items__item__delete,
+.to-do-list__items__item__edit {
+    &:hover {
+        text-shadow: 0.5px 0.5px 1px rgb(214, 199, 199);
+    }
+
+    &:active {
+        text-shadow: 0.5px 0.5px 3px rgb(214, 199, 199);
+    }
+}
+
 .to-do-list {
     font-family: $font-stack;
     background-color: $light-purple;
@@ -66,14 +85,14 @@ input[type=checkbox] {
 }
 
 .to-do-list__input {
-    height: 2em;
     background-color: $white;
     margin-top: 1em;
     margin-bottom: 1em;
-
+    
     input[type=text] {
+        font-size: $font-medium;
         background: transparent;
-        padding-left: 1em;
+        padding: 0.5em 0 0.5em 1em;
         border: none;
         outline: none;
         flex-grow: 1;
@@ -89,9 +108,16 @@ input[type=checkbox] {
 .to-do-list__items__item {
     align-items: center;
     padding: 0.1em 0.8em;
+    font-size: $font-small;
 
     input[type=checkbox] {
         margin-right: 1.5em;
+    }
+}
+
+.to-do-list__items__item__checkbox {
+    &:hover {
+        box-shadow: 0.5px 0.5px 2px;
     }
 }
 
@@ -105,7 +131,16 @@ input[type=checkbox] {
 
 .to-do-list__clear-all {
     align-self: flex-end;
-    padding: 0.5em 1em;
+    padding: 0.75em 1.25em;
     background-color: $light-orange;
-    border: 2px solid black;
+    border: none;
+    box-shadow: 1.5px 1.5px 6px;
+
+    &:hover {
+        background-color: $dark-orange;
+    }
+
+    &:active {
+        box-shadow: 1px 1px 6px;
+    }
 }
