--- a/style.scss
+++ b/style.scss
@@ -4,12 +4,15 @@ $font-small: 1.25rem;
 $font-medium: 1.75rem;
 
 $white: #FFF;
+$gray: #F5F5F5;
 $light-purple: #9381FF;
 $dark-purple: #534C71;
 $light-blue: #B8B8FF;
 $light-orange: #FFA970;
 $dark-orange: #FF8A3C;
 $red: #D62828;
+
+$curved-edge: 0.625rem;
 
 * {
     box-sizing: border-box;
@@ -55,7 +58,7 @@ input[type=checkbox] {
 .to-do-list__input,
 .to-do-list__items,
 .to-do-list__clear-all {
-    border-radius: 0.625rem;
+    border-radius: $curved-edge;
 }
 
 .to-do-list__input__add,
@@ -127,6 +130,24 @@ input.to-do-list__items__item__checkbox {
 
 .to-do-list__items__item__text{
     flex-grow: 1;
+}
+
+.to-do-list__items__item--done {
+    &:first-child {
+        border-top-right-radius: $curved-edge;
+        border-top-left-radius: $curved-edge;
+    }
+
+    &:last-child {
+        border-bottom-left-radius: $curved-edge;
+        border-bottom-right-radius: $curved-edge;
+    }
+    
+    .to-do-list__items__item__text {
+        text-decoration: line-through;
+    }
+    
+    background-color: $gray;
 }
 
 .to-do-list__items__item__delete {
