--- a/style.css
+++ b/style.css
@@ -100,7 +100,9 @@ input.to-do-list__items__item__checkbox {
   margin-right: 1.5em;
   width: 1.25rem;
   height: 1.25rem;
+  flex-shrink: 0;
 }
+
 input.to-do-list__items__item__checkbox::before {
   border-radius: 3px;
 }
